# DayDayUp

./: README.md
C/: crc.c
Linux_C/10_hello/: hello  hello.c  scanf
Linux_C/11_memory_alloc/: static.c
Linux_C/12_enum/: enum
Linux_C/14_copy/: copy.c  launch.json  tasks.json
Linux_C/16_code/: code.c
Linux_C/17_loop/: array.c  fib.c  my_strcpy.c
Linux_C/2_open/: close.c
Linux_C/3_open_write/: main.c
Linux_C/4_lseek/: lseek.c
Linux_C/5_dir/: main.c
Linux_C/6_lib/: mylib.c
Linux_C/7_fork/: fork.c  pipe.c  setsid.c  test.c  wait  wait.c
Linux_C/8_fifo/: fifo_write.c  read
Linux_C/9_store_array/: CMakeLists.txt  main.c
Linux_C/9_store_array/include/: fun.h
Linux_C/9_store_array/src/: fun.c
Spider/: 1.py  a.c  a.can  a.out  a.py  example.xml  example_beautiful.xml  instagram.py  right  right.c  sum  sum.c  test.txt  test1.c  write.py  writexml.py
cmake-examples/example1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main
cmake-examples/example10/: CMakeLists.txt
cmake-examples/example11/: CMakeLists.txt
cmake-examples/example11/src/: main.c
cmake-examples/example12/: CMakeLists.txt
cmake-examples/example13/: CMakeLists.txt
cmake-examples/example14/: CMakeLists.txt  main.c
cmake-examples/example15/: CMakeLists.txt
cmake-examples/example15/src/: CMakeLists.txt  main1.c  main2.c
cmake-examples/example16/: CMakeLists.txt  main.c
cmake-examples/example2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main  main.c
cmake-examples/example3/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main
cmake-examples/example4/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
cmake-examples/example5/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
cmake-examples/example5/test_func/: testfunc.c
cmake-examples/example5/test_func1/: testfunc1.h
cmake-examples/example6/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main  main.c
cmake-examples/example6/test_func1/: testfunc1.c
cmake-examples/example7/: CMakeLists.txt
cmake-examples/example7/include/: testfunc.h
cmake-examples/example7/src/: CMakeLists.txt  main.c
cmake-examples/example8/: CMakeLists.txt
cmake-examples/example8/src/: testfunc1.c
cmake-examples/example9/: CMakeLists.txt
cmake-examples/example9/testfunc/: testfunc.c
cmake_learn/demo1/: CMakeLists.txt
cmake_learn/demo2/: CMakeLists.txt
cmake_learn/demo2/src/: hello1.c  hello2.c  hello3.c
cmake_learn/demo3/: CMakeLists.txt
cmake_learn/demo4/: CMakeLists.txt
cmake_learn/demo4/lib/: CMakeLists.txt  hello.c  hello.h
cmake_learn/demo5/: CMakeLists.txt  main  main.c  mian
cmake_learn/demo6/: CMakeLists.txt  mian
cmake_learn/demo6/include/: add.h  sub.h
cmake_learn/demo6/src/: CMakeLists.txt
cmake_learn/demo7/: CMakeLists.txt  main.c
expect/: demo3.sh  demo4.exp  demo5.exp  expect_demo1.exp  expect_demo2.exp
html/: Untitled Diagram.drawio  table.html
python_unittest/example1/: test_vector.py  vector.py
python_unittest/example2/: test_vector.py
python_unittest/example3/: test_repeat.py
python_unittest/example4/: test_repeat.py
shell_debug/: README.md  example1.sh  example2.sh  example3.sh  example4.sh  example6.sh  example7.sh  example8.sh  functin.sh  launch.json  print.sh
syscalls/: CMakeLists.txt  build.sh  push.sh
syscalls/10_hello/: scanf.c
syscalls/11_memory_alloc/: static
syscalls/12_enum/: enum.c
syscalls/13_complement/: complement  complement.c
syscalls/14_copy/: CMakeLists.txt
syscalls/15_fstat/: fstat.c
syscalls/16_code/: code.c
syscalls/17_loop/: factorial.c
syscalls/18_big_little/: big_little  big_little.c
syscalls/1_arch/: arch.cpp  main.c
syscalls/2_open/: open.c  read.c
syscalls/3_open_write/: a.txt
syscalls/4_lseek/: main.c
syscalls/5_dir/: d.txt  mkdir.c  readdir.c
syscalls/6_lib/: main.c
syscalls/7_fork/: fork1.c  pipe  setsid
syscalls/8_fifo/: fifo_read.c  write
syscalls/9_store_array/include/: arr.h
xmake/example/: xmake.lua
xmake/example/.xmake/linux/x86_64/: xmake.conf
xmake/example/.xmake/linux/x86_64/cache/: config  detect  history  toolchain
