cmake_minimum_required(VERSION 3.22.1)
project(example16_main)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
option(WWW1_OPTION "print one message" OFF)
option(WWW2_OPTION "print another messages" OFF)
if (WWW1_OPTION)
	add_definitions(-DWWW1)
endif()
if(WWW2_OPTION)
	add_definitions(-DWWW2)
endif()
add_executable(main main.c)
