cmake_minimum_required(VERSION 3.22.1)
project(demo3 C)
add_compile_options(-g -static)

# if语句当中的${}可以不用
if(OPT1 STREQUAL "HELLO1")
  message("OPT1=HELLO1")
  add_executable(hello1 src/hello1.c)
elseif(OPT1 STREQUAL "HELLO2")
  message("OPT1=HELLO2")
  add_executable(hello2 src/hello2.c)
else()
  message(FATAL_ERROR "OPT1=${OPT1}")
endif()
message(${PROJECT_BINARY_DIR})
message(${PROJECT_SOURCE_DIR})
message(STATUS "this is line 17")
message(SEND_ERROR "this is line 18")
message(FATAL_ERROR "this is line 19")
